--- a/Fekrah/API/ClientApp/src/app/app.component.html
+++ b/Fekrah/API/ClientApp/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 <app-promo-ticker></app-promo-ticker>
 
-<!-- <div class="promo-strip">
+<div class="promo-strip">
   🔥 خصومات صيفية تصل إلى 50% على جميع قطع الغيار! 🔥
-</div> -->
+</div>
 
 
 
