--- a/Fekrah/API/ClientApp/src/app/app.component.scss
+++ b/Fekrah/API/ClientApp/src/app/app.component.scss
@@ -39,53 +39,10 @@
 
 
 .promo-strip {
-  background-color: #febd69;
+  background-color: #a3d616;
   color: #333;
   text-align: center;
   padding: 8px 0;
   font-size: 16px;
   font-weight: bold;
-}
-
-
-.promo-ticker {
-  width: 100%;
-  overflow: hidden;
-  background-color: #febd69;
-  padding: 5px 0;
-  position: relative;
-
-  .promo-ticker-content {
-    display: inline-flex;
-    animation: scroll-left 30s linear infinite;
-    gap: 40px; /* مسافة بين العروض */
-  }
-
-  .promo-item {
-    white-space: nowrap;
-    font-size: 16px;
-    font-weight: bold;
-    color: #333;
-    text-decoration: none;
-    background: white;
-    padding: 6px 12px;
-    border-radius: 10px;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-    transition: background 0.3s;
-
-    &:hover {
-      background: #f3a847;
-      color: #fff;
-    }
-  }
-}
-
-/* ✅ Animation لتحريك العروض */
-@keyframes scroll-left {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
 }
