--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
@@ -7,11 +7,11 @@
   top: 50%;
   right: 5px;
   transform: translateY(-50%); /* ✅ ينزل بالنص تمام */
-  background-color: #febd69;
+  // background-color: #febd69;
   color: #333;
   border: none;
   padding: 12px 16px;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
