--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.scss
@@ -1,6 +1,13 @@
 .home-page {
   position: relative;
+  background-image: url('/assets/images/background.jpg');
+  background-size: cover;           // يغطي كامل الصفحة
+  background-repeat: no-repeat;     // بدون تكرار
+  background-position: center;      // مركزي
+  background-attachment: fixed;     // ✅ الخلفية تظل ثابتة أثناء التمرير
+  min-height: 100vh;                // لتغطية الشاشة بالكامل
 }
+
 
 .filter-open-button {
   position: fixed;
@@ -115,10 +122,51 @@
 /* ✅ منطقة عرض القطع */
 .parts-section {
   width: 100%;
-  padding: 20px;
+  // padding: 20px;
   transition: all 0.5s ease;
 }
 
 .parts-section.shrink {
   margin-right: 280px;
+}
+
+
+.latest-parts-section {
+  background: linear-gradient(to right, #4f5458, #69798a);
+  padding: 30px 20px;
+  border-radius: 12px;
+  margin: 50px 0;
+
+  .section-title {
+    color: white;
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 25px;
+    font-weight: bold;
+  }
+
+  .swiper-container {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .swiper-slide {
+    display: flex !important;
+    justify-content: center;
+  }
+
+  .swiper-pagination {
+    bottom: -20px !important;
+    text-align: center;
+
+    .swiper-pagination-bullet {
+      background: #ffc107;
+      opacity: 0.7;
+    }
+
+    .swiper-pagination-bullet-active {
+      background: #ff9800;
+      opacity: 1;
+    }
+  }
 }
