--- a/Fekrah/API/ClientApp/src/app/core/features/home/part-preview/part-preview.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/part-preview/part-preview.component.html
@@ -1,7 +1,7 @@
 <div class="part-preview-section">
   <h2 class="section-title">أحدث القطع</h2>
 
-  <div class="swiper-container latest-parts-swiper" dir="ltr">
+  <div class="swiper-container latest-parts-swiper" dir="rtl">
     <div class="swiper-wrapper">
       <div class="swiper-slide" *ngFor="let part of latestParts">
         <app-part-card [part]="part"></app-part-card>
