--- a/Fekrah/API/ClientApp/src/app/core/features/home/part-preview/part-preview.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/part-preview/part-preview.component.scss
@@ -6,21 +6,17 @@
   overflow: hidden;
   z-index: 1;
 
-  background: linear-gradient(
-      to right,
-      rgba(50, 119, 54, 0.95),
-      rgba(126, 180, 122, 0.95)
-    ),
-    // ✅ تغطية لونية ناعمة
-    url("/assets/images/background2.png") no-repeat center center; // ✅ الخلفية
+  background-image: url("../../../../../assets/images/background4.png");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   .section-title {
     font-size: 24px;
     text-align: center;
     margin-bottom: 20px;
     font-weight: bold;
-    color: #333;
+    color: #fff; // لون أوضح على الخلفية
     z-index: 2;
     position: relative;
   }
@@ -42,12 +38,12 @@
     bottom: -20px !important;
 
     .swiper-pagination-bullet {
-      background: #555;
+      background: #fff;
       opacity: 0.5;
     }
 
     .swiper-pagination-bullet-active {
-      background: #222;
+      background: #ffc107;
       opacity: 1;
     }
   }
