--- a/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.html
@@ -1,19 +1,13 @@
 <div class="suggested-offers-section">
   <h2 class="section-title">مقترحات لك</h2>
 
-  <div class="swiper-container suggested-swiper">
+  <div class="swiper-container suggested-offers-swiper" dir="ltr">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" *ngFor="let offer of suggestedOffers">
-        <div class="offer-card">
-          <div class="image-container">
-            <img [src]="offer.imageUrl" alt="{{ offer.name }}">
-          </div>
-          <h3>{{ offer.name }}</h3>
-          <p class="price">{{ offer.price }} جنيه</p>
-        </div>
+      <div class="swiper-slide" *ngFor="let part of suggestedParts">
+        <app-part-card [part]="part"></app-part-card>
       </div>
     </div>
 
-  
+    <div class="swiper-pagination"></div>
   </div>
 </div>
