--- a/Fekrah/API/ClientApp/src/app/app.component.scss
+++ b/Fekrah/API/ClientApp/src/app/app.component.scss
@@ -39,10 +39,19 @@
 
 
 .promo-strip {
-  background-color: #a3d616;
-  color: #333;
+  display: block;
+  background: linear-gradient(to right, #643a1c, #e36900);
+  color: white;
   text-align: center;
-  padding: 8px 0;
+  padding: 12px 0;
   font-size: 16px;
   font-weight: bold;
+  text-decoration: none;
+  transition: background 0.3s;
+
+  &:hover {
+    background: linear-gradient(to right, #ff7f00, #ffc166);
+    cursor: pointer;
+  }
 }
+
