--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -48,6 +48,8 @@
     <section class="parts-section" [class.shrink]="filtersOpened">
 
       <app-banner></app-banner>
+      <app-featured-sellers></app-featured-sellers>
+
       <app-categories></app-categories>
       <app-offers></app-offers>
       <app-part-preview></app-part-preview>
