--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -43,9 +43,11 @@
       </div>
 
     </aside>
-
     <!-- ✅ المحتوى الرئيسي -->
     <section class="parts-section" [class.shrink]="filtersOpened">
+      <a routerLink="home/offers" class="promo-strip">
+        🔥 خصومات صيفية تصل إلى 50% على جميع قطع الغيار! 🔥
+      </a>
 
       <app-banner></app-banner>
       <app-featured-sellers></app-featured-sellers>
