--- a/Fekrah/API/ClientApp/src/app/core/features/category/category-parts/category-parts.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/category/category-parts/category-parts.component.html
@@ -3,7 +3,9 @@
   <!-- ✅ Header ثابت ويتحرك عند فتح الفلتر -->
   <header class="header">
     <div class="header-right">
-      <h1 class="page-title">🛠️ قطع الغيار المتوفرة</h1>
+      <h1 class="page-title">
+        🛠️ {{ categoryName }}
+      </h1>
     </div>
 
     <div class="header-left">
