--- a/Fekrah/API/ClientApp/src/app/core/features/home/categories/categories.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/categories/categories.component.scss
@@ -10,9 +10,9 @@
 
   .section-title {
     position: relative;
-    font-size: 24px;
+    font-size: 50px;
     font-weight: 600;
-    color: #0d47a1;
+    color: white;
     margin-bottom: 16px;
     text-align: center;
     z-index: 1;
@@ -20,7 +20,7 @@
 
   .swiper-container {
     position: relative;
-    padding-bottom: 20px;
+    padding-bottom: 70px;
     z-index: 1;
   }
 
