--- a/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
@@ -6,7 +6,7 @@
 
   .section-title {
     color: white;
-    font-size: 26px;
+    font-size: 50px;
     text-align: center;
     margin-bottom: 30px;
     font-weight: bold;
@@ -27,6 +27,7 @@
     align-items: center;
     flex-shrink: 0;
     width: auto !important;
+    margin-right: 50px !important;
   }
 
   .offer-card {
@@ -175,6 +176,8 @@
       cursor: pointer;
       transition: 0.3s;
       align-self: center;
+      position: relative;
+      left: 27%;
 
       &:hover {
         background-color: #f3a847;
