--- a/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.scss
@@ -10,11 +10,11 @@
   z-index: 1;
 
   .section-title {
-    font-size: 24px;
+    font-size: 50px;
     text-align: center;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #333;
+    color: white;
     position: relative;
     z-index: 2;
   }
